--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@100;300;400;700&family=Noto+Serif+Display:wght@100;300;400;700&display=swap');
 
+:root {
+   /* Transitions */
+   --transition: transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1),
+   transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
+} 
+
+
 html {
   background-color: hsl(0, 0%, 100%);
 }
