--- a/styles/styles.css
+++ b/styles/styles.css
@@ -348,24 +348,16 @@ body {
 
 /* Footer Starts Here */
 /* Footer */
-.footer {
-  flex-shrink: 0;
-  display: flex;
-  justify-content: space-between;
-  flex-direction: row;
-  margin: 0;
-  height: auto;
+
+.social-links {
+  flex-direction: column;
   background-color: #141517;
   color: #fff;
-  font-size: 0.75rem;
+  font-size: 0.75rem; 
+  padding-block-end: 1rem;
 }
 
-.footer ul {
-  display: flex;
-  justify-content: center;
-  margin: 0.5rem 0;
-}
-.footer ul li {
+.social-links ul li {
   padding: 0 0.5rem;
   margin: 0;
 }
@@ -381,8 +373,8 @@ body {
 }
 
 .copyright {
+  flex-direction: column;
   align-self: center;
-  padding-right: 1rem;
 }
 /* Footer Ends Here */
 
