updated picture assets for mobile - services section

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -302,7 +302,7 @@ body {
   border-bottom: 1px solid #fff;
 }
 
-.stewardship-description {
+.stewardship-description.openDescription{
   display: none;
 }
 
