--- a/styles/styles.css
+++ b/styles/styles.css
@@ -32,6 +32,8 @@ body {
   font-size: 0.875rem;
   line-height: 1.125rem;
   border-bottom: 2px solid #fff;
+  /* position: sticky;
+  top: 0; */
 }
 /* Contact Banner Ends Here */
 
@@ -44,7 +46,7 @@ body {
  
 }
 .logo {
-  width: 150px;
+  width: 200px;
   padding-inline-start: 1rem;
 }
 
@@ -190,8 +192,16 @@ body {
     padding-inline-start: 2rem;
     padding-inline-end: 2rem;
   }
+
+  .logo {
+    width: 200px;
+    /* padding-inline-start: 1rem; */
+  }
   .nav-items {
     display: initial;
+  }
+  .nav-items li {
+    font-size: 1.25em;
   }
   .menu-btn {
     display: none;
@@ -384,8 +394,8 @@ body {
 /* Stewardship */
 .stewardship-options {
   margin-block-start: 1rem;
-  /* border-top: 1px solid #fff; */
-  /* border-bottom: 1px solid #fff; */
+  border-top: 1px solid #fff;
+  border-bottom: 1px solid #fff;
 }
 
 .stewardship-description.openDescription{
@@ -413,7 +423,7 @@ body {
 .stewardship-btn {
   padding: 0.25em;
   font-weight: 700;
-  visibility: hidden;
+  /* visibility: hidden; */
 }
 
 .stewardship-options p {
@@ -423,6 +433,7 @@ body {
   margin-block-start: 0.5em;
   margin-block-end: 1em;
   color: #fff;
+  display: none;
 }
 /* Services Section Ends Here */
 
