--- a/styles/styles.css
+++ b/styles/styles.css
@@ -158,7 +158,7 @@ body {
     grid-column: 3 / 3;
     justify-self: center;
     align-self: center;
-    padding: 0.75em 0.75em;
+    padding: 0.75em 0.1em;
     border: 1px solid grey;
     border-radius: 15px;
     text-align: center;
@@ -223,7 +223,7 @@ body {
 }
 
 .btn {
-  padding: 0.5em 0.5em;
+  padding: 0.75em 0.75em;
   border-radius: 15px;
   box-shadow: 2px 2px --color-Black-transparent;
   cursor: pointer;
@@ -240,6 +240,13 @@ body {
   border: 2px solid --color-White;
   color: --color-White;
   transform: translateY(-2px);
+}
+
+@media (max-width:350px) {
+  .btn {
+    font-size: 1em;
+    padding: 0;;
+  }
 }
 
 
@@ -279,6 +286,12 @@ body {
   text-shadow: 2px 2px 2px rgba(0, 0, 0, 1);
 }
 
+@media (max-width:350px) {
+  .hero-title {
+    font-size: 2em;
+  }
+  
+}
 
 @media (min-width: 769px) {
   .hero-overlay {
@@ -322,6 +335,18 @@ body {
   position: inline;
   left: 2rem;
   top: 4rem;
+}
+
+@media (max-width:350px) {
+  .about-wrapper h2 {
+    font-size: 2rem;
+  }
+  .about-wrapper p {
+    font-size: 1em;
+  }
+  .text-highlight {
+    font-size: 1.25rem;
+  }
 }
 
 @media (min-width: 769px) {
@@ -406,7 +431,7 @@ body {
     grid-column-end: 2;
   }
 
-  .services-card-content .stewardship-options h4 {
+  .services-card-content h4 {
     margin-block-start: 0;
   }
 }
@@ -425,6 +450,7 @@ body {
 }
 
 .services-options h4 {
+  font-weight: 400;
   font-size: 1.125em;
   margin-block-start: 0.3125em;
   margin-block-end: 0.3125em;
@@ -442,6 +468,20 @@ body {
   margin-block-start: 0.5em;
   margin-block-end: 1em;
   color: #fff;
+}
+
+@media (max-width:350px) {
+  .services-wrapper h2 {
+    font-size: 2rem;
+  }
+  .services-card h3 {
+    font-size: 1em;
+  }
+  .services-options h4 {
+    font-size: 1em;
+    font-weight: 400;
+  }
+  
 }
 /* Services Section Ends Here */
 
