--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Display:wght@100;300;400;700&family=Noto+Serif+Display:wght@100;300;400;700&display=swap');
 
 :root {
-   /* Transitions */
-   --transition: transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1),
-   transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
-} 
+  /* Transitions */
+  --transition: transition: transform 1s cubic-bezier(0.86, 0, 0.07, 1),
+    transform-origin 1s cubic-bezier(0.86, 0, 0.07, 1);
+}
 
 
 body {
@@ -14,7 +14,7 @@ body {
   margin: 0 auto;
 }
 
-.page-wrapper{
+.page-wrapper {
   max-width: 1440px;
   margin: 0 auto;
 }
@@ -165,6 +165,7 @@ body {
     background-color: hsla(191, 65%, 14%, 1);
     color: hsla(0, 0%, 100%, 1);
   }
+
   .contact-btn-desktop:hover {
     color: hsla(168, 100%, 25%, 1);
     background: hsla(0, 0%, 100%, 1);
@@ -173,10 +174,12 @@ body {
   .menu-list ul {
     display: flex;
   }
+
   .menu-list ul li {
     padding: 1em 1em;
     font-size: 1.5em;
   }
+
   .menu-list ul li:hover {
     transform: scale(1.1);
   }
@@ -245,7 +248,8 @@ body {
 @media (max-width:350px) {
   .btn {
     font-size: 1em;
-    padding: 0;;
+    padding: 0;
+    ;
   }
 }
 
@@ -276,6 +280,7 @@ body {
   background: rgba(0, 0, 0, 0.2);
   color: #fff;
 }
+
 .hero-title {
   position: relative;
   top: 1em;
@@ -290,23 +295,27 @@ body {
   .hero-title {
     font-size: 2em;
   }
-  
+
 }
 
 @media (min-width: 769px) {
   .hero-overlay {
     background: none;
   }
+
   .hero-title {
     font-size: 4.25em;
   }
-  .hero-image-desktop  {
+
+  .hero-image-desktop {
     display: initial;
   }
+
   .hero-image-mobile {
     display: none;
   }
 }
+
 /* Hero Section End Here */
 
 /* About Section Starts Here */
@@ -331,6 +340,7 @@ body {
   font-size: 1.875rem;
   color: #007E65;
 }
+
 .hero-headline {
   position: inline;
   left: 2rem;
@@ -341,9 +351,11 @@ body {
   .about-wrapper h2 {
     font-size: 2rem;
   }
+
   .about-wrapper p {
     font-size: 1em;
   }
+
   .text-highlight {
     font-size: 1.25rem;
   }
@@ -354,6 +366,7 @@ body {
     padding: 5rem;
   }
 }
+
 /* About Section Ends Here */
 
 /* Services Section Starts Here */
@@ -361,6 +374,7 @@ body {
   background-color: #008066;
   padding: 2rem;
 }
+
 .services-wrapper h2 {
   font-family: 'Noto Serif Display', sans-serif;
   font-size: 2.375rem;
@@ -373,7 +387,7 @@ body {
   padding: 1rem;
   margin-block-end: 1.875rem;
   background: rgba(0, 0, 0, 0.1);
-  color:hsl(0, 0%, 100%);
+  color: hsl(0, 0%, 100%);
   box-shadow: 4px 4px 4px rgba(0, 0, 0, 0.25);
 }
 
@@ -386,7 +400,7 @@ body {
 }
 
 .services-img-desktop {
-  display:none;
+  display: none;
 }
 
 .services-description p {
@@ -413,17 +427,18 @@ body {
   }
 
 
-  .section-title  {
+  .section-title {
     grid-column-start: 1;
     grid-column-end: 3;
   }
+
   .services-card {
     width: 95%;
-     justify-self: center; 
-     align-self: flex-start;
-     display: grid;
-     grid-template-columns: 1fr;
-     grid-template-rows: auto 1fr auto;
+    justify-self: center;
+    align-self: flex-start;
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-template-rows: auto 1fr auto;
   }
 
   .services-card-title {
@@ -474,15 +489,18 @@ body {
   .services-wrapper h2 {
     font-size: 2rem;
   }
+
   .services-card h3 {
     font-size: 1em;
   }
+
   .services-options h4 {
     font-size: 1em;
     font-weight: 400;
   }
-  
+
 }
+
 /* Services Section Ends Here */
 
 /* Case Studies Section Starts Here */
@@ -490,7 +508,72 @@ body {
   background-color: #fdfdfd;
   height: 200px;
 }
+
 /* Case Studies Section Starts Here */
+
+
+/* Policy Section Starts Here */
+.policy-wrapper {
+  color: #033959;
+  padding: 2rem;
+}
+
+.policy-wrapper h2 {
+  font-family: 'Noto Serif Display', sans-serif;
+  font-size: 2.375rem;
+}
+
+.policy-wrapper h3 {
+  /* font-family: 'Noto Serif Display', sans-serif; */
+  font-size: 1.75rem;
+  padding-block-start: 1.5rem;
+  /* font-size: 2.375rem; */
+}
+
+.policy-wrapper p {
+  padding-block-start: 0.25rem;
+  font-size: 1.25em;
+  line-height: 2rem;
+}
+
+.policy-wrapper ul {
+  list-style: disc;
+  padding-left: 1rem;
+  font-weight: 300;
+}
+
+.text-highlight {
+  font-weight: 700;
+  font-size: 1.875rem;
+  color: #007E65;
+}
+
+.hero-headline {
+  position: inline;
+  left: 2rem;
+  top: 4rem;
+}
+
+@media (max-width:350px) {
+  .policy-wrapper h3 {
+    font-size: 2rem;
+  }
+
+  .policy-wrapper p {
+    font-size: 1em;
+  }
+
+  .text-highlight {
+    font-size: 1.25rem;
+  }
+}
+
+@media (min-width: 769px) {
+  .policy-wrapper {
+    padding: 5rem;
+  }
+}
+
 
 /* Footer Starts Here */
 /* Footer */
@@ -499,7 +582,7 @@ body {
   flex-direction: column;
   background-color: #0C3139;
   color: #fff;
-  font-size: 0.75rem; 
+  font-size: 0.75rem;
   padding-block-end: 1rem;
 }
 
@@ -512,6 +595,7 @@ body {
   font-size: 1.125rem;
   padding: 0.6rem;
 }
+
 .icon:hover {
   font-size: 1.125rem;
   transform: scale(1.25);
@@ -525,7 +609,7 @@ body {
 
 
 @media (min-width: 768px) {
-  .social-links{
+  .social-links {
     flex-direction: row;
     justify-content: space-between;
     padding-inline-start: 2rem;
@@ -537,6 +621,7 @@ body {
     font-size: 1.125rem;
     padding: 0;
   }
+
   .icon:hover {
     font-size: 1.125rem;
     transform: scale(1.25);
@@ -547,11 +632,13 @@ body {
   .copyright {
     flex-direction: row;
   }
+
   .copyright p {
     padding: 0 0.625rem;
     font-size: 1rem;
   }
 }
+
 /* Footer Ends Here */
 
 
